--- a/Johnny Nash/index.html
+++ b/Johnny Nash/index.html
@@ -10,6 +10,20 @@
 		<a href="simplebar.html">Simple Bar Chart</a>
 		<a href="svg1.html">SVG Example 1</a>
 		<a href="svgbar.html">SVG Bar Chart</a>
+		<a href="scatterplot1.html">SVG Scatter Plot</a>
+		<a href="scales101.html">Scales 101</a>
+		<a href="axis101.html">Axis 101</a>
+		<a href="updatingbarchart.html">Updating Bar Chart</a>
+		<a href="updatingaxes.html">Updating Scatter Chart</a>
+		<a href="updatingbarchart2.html">Updating Bar Chart 2</a>
+		<a href="removingelements.html">Removing Elements</a>
+		<a href="datajoins.html">Data Joins</a>
+		<a href="addremoveandjoins.html">Add Remove and Data Joins</a>
+		<a href="simplebard3highlighting.html">Simple Bar Chart With D3 Highlighting</a>
+		<a href="simplepie.html">Simple Pie Chart</a>
+		<a href="stackedbarchart.html">Stacked Bar Chart</a>
+		<a href="forcelayout.html">Force Layout</a>
+		<a href="geomapping.html">Geomapping</a>
 		</div>
         <script type="text/javascript">
             // Your beautiful D3 code will go here
