--- a/Johnny Nash/svgbar.html
+++ b/Johnny Nash/svgbar.html
@@ -17,7 +17,7 @@
                 24, 18, 25, 9, 3 ];
 			
 			var w = 500;
-			var h = 100;
+			var h = 120;
 			var barPadding = 1;
 			
 			var svg = d3.select("body") //select the body element
@@ -29,12 +29,29 @@
 				.data(dataset) //get data
 				.enter() //pass data for processing
 				.append("rect") //add rects for each datum
-				.attr("x", function(d, i) {
-					return i * (w / dataset.length);
+				.attr({
+					fill: function(d) { return "rgb(0, 0, " + (d * 10) + ")"; }, //color the bars
+					x: function(d, i) { return i * (w / dataset.length); }, //dynamically set the x coordinate for each bar
+					y: function(d) { return h - (d * 4); }, //Height - datum value
+					width: function() { return w / dataset.length - barPadding; }, //dynamically set the width to preserve spacing
+					height: function(d) { return d * 4; }//just the data value
+				});
+				
+			svg.selectAll("text")
+				.data(dataset)
+				.enter()
+				.append("text")
+				.text(function(d) {
+					return d;
 				})
-				.attr("y", 0)
-				.attr("width", w / dataset.length - barPadding)
-				.attr("height", 100);
+				.attr({
+					x: function(d, i) { return (i * (w / dataset.length)) + ((w / dataset.length - barPadding) / 2); },
+					y: function(d) { return h - (d * 4) + 12; },
+					"font-family": "sans-serif",
+					"font-size": "11px",
+					fill: "white",
+					"text-anchor": "middle"
+				});
 			
         </script>
     </body>
